increase the size of a single line

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Pamphlet.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Pamphlet.xcscheme
@@ -74,6 +74,20 @@
             ReferencedContainer = "container:">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--clean"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Development/Development/chimerasw2/starbaseorion10/Server/Resources"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Development/Development/chimerasw2/starbaseorion10/Server/Sources/Pamphlet"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
