exposing closure-compiler error output

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Pamphlet.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Pamphlet.xcscheme
@@ -77,6 +77,10 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "--clean"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--collapse"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
