--- a/Tools/Makefile
+++ b/Tools/Makefile
@@ -1,12 +1,11 @@
 all:
-	node_modules/.bin/rollup tools.js --banner "let global = {};" --no-treeshake -f iife -o ./Pamphlet/tools.js -p @rollup/plugin-node-resolve
-    
-	
+	node_modules/.bin/browserify tools.js > ./Pamphlet/tools.js	
 
 install:
 	-brew install node
     
 	npm i terser
-	npm i rollup @rollup/plugin-node-resolve
+	npm i minimize
+	npm i browserify
 	
 	npm update
