--- a/Tools/package.json
+++ b/Tools/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "rollup": "^2.77.2",
+    "browserify": "^17.0.0",
+    "clean-css": "^5.3.1",
+    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.0.0-beta.0",
+    "minimize": "^2.2.0",
     "terser": "^5.14.2"
   }
 }
