--- a/Tools/package.json
+++ b/Tools/package.json
@@ -5,6 +5,7 @@
     "clean-css": "^5.3.1",
     "html-minifier": "^4.0.0",
     "html-minifier-terser": "^7.0.0-beta.0",
+    "jsonminify": "^0.4.2",
     "minimize": "^2.2.0",
     "terser": "^5.14.2"
   }
