--- a/.swiftpm/xcode/xcshareddata/xcschemes/Pamphlet-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Pamphlet-Package.xcscheme
@@ -104,6 +104,34 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PamphletReleasePlugin"
+               BuildableName = "PamphletReleasePlugin"
+               BlueprintName = "PamphletReleasePlugin"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PamphletReleaseOnlyPlugin"
+               BuildableName = "PamphletReleaseOnlyPlugin"
+               BlueprintName = "PamphletReleaseOnlyPlugin"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
