--- a/Dockerfile-focal
+++ b/Dockerfile-focal
@@ -1,4 +1,4 @@
-FROM swift:5.6.2-focal
+FROM swift:5.6.2-focal as builder
 
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true && apt-get -q update && \
     apt-get install -y \
@@ -15,3 +15,9 @@ COPY ./Tests ./Tests
 
 RUN swift test
 RUN swift build --configuration release
+
+FROM fedora:37
+
+WORKDIR /root/Pamphlet
+COPY --from=builder /root/Pamphlet/.build/release/PamphletTool-focal .
+COPY --from=builder /root/Pamphlet/.build/release/PamphletTool-focal .
