--- a/Dockerfile-focal-580
+++ b/Dockerfile-focal-580
@@ -1,4 +1,4 @@
-FROM swift:5.8.0-focal as builder
+FROM swift:5.8.0-focal AS builder
 
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true && apt-get -q update && \
     apt-get install -y \
@@ -7,13 +7,15 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true && ap
 
 WORKDIR /root/Pamphlet
 COPY ./dist ./dist
+COPY ./.build/repositories ./.build/repositories
+COPY ./.git ./.git
 COPY ./Package.resolved ./Package.resolved
 COPY ./Package.swift ./Package.swift
 COPY ./Plugins ./Plugins
 COPY ./Sources ./Sources
 COPY ./Tests ./Tests
 
-RUN swift test
+#RUN swift test
 RUN swift build --configuration release
 
 FROM swift:5.7.1-focal
