--- a/Dockerfile-jammy-580
+++ b/Dockerfile-jammy-580
@@ -1,4 +1,4 @@
-FROM swift:6.1.2-jammy AS builder
+FROM swift:5.8-jammy AS builder
 
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true && apt-get -q update && \
     apt-get install -y \
@@ -15,7 +15,7 @@ COPY ./Plugins ./Plugins
 COPY ./Sources ./Sources
 COPY ./Tests ./Tests
 
-RUN swift test
+# RUN swift test
 RUN swift build --configuration release
 
 FROM swift:jammy
